# video2md

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.yml  pyproject.toml
src/video2md/: __init__.py  cli.py  config.py  evidence.py  frame_selector.py  markdown.py  media.py  models.py  pipeline.py  utils.py
src/video2md/backends/: asr.py  ocr.py  vlm.py
tests/: test_asr_backend.py  test_evidence.py  test_frame_selector.py  test_markdown.py  test_ocr_backend.py  test_pipeline_vlm_selection.py  test_term_override.py  test_utils.py  test_vlm_backend.py
